--- a/Pages/lista.html
+++ b/Pages/lista.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Lista de Produtos</title>
-    <link rel="stylesheet" href="css/lista.css">
+    <link rel="stylesheet" href="/Sistema_Compras/css/lista.css">
 </head>
 
 <body>
@@ -18,14 +18,17 @@
                 <th>Quantidade necessário</th>
                 <th>Quantidade comprado</th>
                 <th>Coletado</th>
+                <th>Editar</th>
+                <th>Excluir</th>
             </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+        </tbody>
     </table>
-    <button id="sendToServer" disabled>Enviar para o Servidor</button>
+    <button id="sendToServer">Enviar para o Servidor</button>
     <button id="clearList">Limpar Lista</button>
-    <a href="cadastro.html">Cadastrar Produtos</a>
-    <script src="js/lista.js"></script>
+    <a href="/Sistema_Compras/Pages/cadastro.html">Cadastrar Produtos</a>
+    <script type="module" src="/Sistema_Compras/js/lista.js"></script>
 </body>
 
 </html>
