--- a/Pages/cadastro.html
+++ b/Pages/cadastro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Cadastro de Produtos</title>
-    <link rel="stylesheet" href="/Sistema_Compras/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -46,9 +46,9 @@
             <button type="button" id="deleteButton">Excluir</button>
         </div>
     </form>
-    <a href="/Sistema_Compras/Pages/lista.html">Ir para Lista de Produtos</a>
+    <a href="/Pages/lista.html">Ir para Lista de Produtos</a>
     <button></button>
-    <script src="/Sistema_Compras/js/cadastro.js"></script>
+    <script src="/js/cadastro.js"></script>
 </body>
 
 </html>
