--- a/Pages/lista.html
+++ b/Pages/lista.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Lista de Produtos</title>
-    <link rel="stylesheet" href="/Sistema_Compras/css/lista.css">
+    <link rel="stylesheet" href="/css/lista.css">
 </head>
 
 <body>
@@ -27,8 +27,8 @@
     </table>
     <button id="sendToServer">Enviar para o Servidor</button>
     <button id="clearList">Limpar Lista</button>
-    <a href="/Sistema_Compras/Pages/cadastro.html">Cadastrar Produtos</a>
-    <script type="module" src="/Sistema_Compras/js/lista.js"></script>
+    <a href="/Pages/cadastro.html">Cadastrar Produtos</a>
+    <script type="module" src="/js/lista.js"></script>
 </body>
 
 </html>
