--- a/Pages/cadastro.html
+++ b/Pages/cadastro.html
@@ -46,8 +46,8 @@
             <button type="button" id="deleteButton">Excluir</button>
         </div>
     </form>
-    <a href="/Pages/lista.html">Ir para Lista de Produtos</a>
-    <button></button>
+    <a class="btn_lista" href="/Pages/lista.html">Ir para Lista de Produtos</a>
+
     <script src="/js/cadastro.js"></script>
 </body>
 
