--- a/Pages/lista.html
+++ b/Pages/lista.html
@@ -18,7 +18,7 @@
                 <th>Quantidade necessário</th>
                 <th>Quantidade comprado</th>
                 <th>Coletado</th>
-                <th>Editar</th>
+                <!-- <th>Editar</th> -->
                 <th>Excluir</th>
             </tr>
         </thead>
